[gd_scene load_steps=3 format=3 uid="uid://d4k2vq6vct2p8"]

[ext_resource type="Script" path="res://Scripts/main_manu.gd" id="1_7jptb"]
[ext_resource type="Script" path="res://Scripts/button.gd" id="2_nvpyy"]

[node name="MainManu" type="Node2D"]
position = Vector2(-1, 0)
script = ExtResource("1_7jptb")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.5
offset_top = 176.0
offset_right = 57.5
offset_bottom = 277.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2

[node name="Button_Play" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "PLAY"
script = ExtResource("2_nvpyy")

[node name="Button_Tutorial" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "TUTORIAL"

[node name="Button_Exit" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "EXIT"

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
visible = false
layout_mode = 2

[node name="Return" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer2"]
layout_mode = 2
text = "RETURN"
script = ExtResource("2_nvpyy")

[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/Button_Play" to="." method="_on_button_play_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/Button_Tutorial" to="." method="_on_button_tutorial_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/Button_Exit" to="." method="_on_button_exit_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer2/Return" to="." method="_on_return_pressed"]
